# ForgeFin

./: .env  .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  LICENSE  Makefile  PROJECT_PLAN.md  README.md  TODO.md  Trunk.toml  index.html  package-lock.json  package.json  skills-lock.json  styles.css  tree.md
.agents/skills/forgefin-financial-workflows/: SKILL.md
.agents/skills/forgefin-layout-patterns/: SKILL.md
.agents/skills/forgefin-page-generator/: SKILL.md
.agents/skills/forgefin-theme-system/: SKILL.md
.agents/skills/leptos-0.8/: SKILL.md
.harness/: AGENTS.md  PLAN.md  agent_control.md
.harness/logs/: execution_log.md
.opencode/: AGENTS.md  agent_control.md
docs/: README.md  architecture_suggestions.md  companies-selection-plan.md  company-selection-page-plan.md  stylelayout.md  styletheme.css  业务数据源分析.md  业务模块分析.md  开发计划.md  测试方案.md  结构提示词样式.md
docs/analysis/: dynamic-source-data-model.md  health-source-data-analysis.md  project-accounting-extension.md  project-source-data-analysis.md  source-data-preservation.md
docs/logs/: 2026-07-06-Phase0-Phase1-开发日报.md  WSL开发环境问题排查.md  agent_fix_guide.md  fix_summary.md  summary.md
docs/plan/: phase0_plan.md  phase1_acceptance.md  phase1_plan.md  phase2_plan.md  phase3_plan.md  phase4_plan.md  phase5_plan.md
docs/tools/: README.md  md_to_html_pdf.py
domain/: Cargo.toml
domain/src/: ledger.rs  lib.rs  repositories.rs
domain/src/application/: mod.rs
domain/src/application/services/: project_service.rs
domain/src/infrastructure/: mod.rs
domain/src/infrastructure/persistence/repositories/: sqlite_project_repository.rs  sqlite_voucher_repository.rs
public/: styles.css
src/: app.rs  auth.rs  ipc.rs  main.rs  nav.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20260612000000_init_foundation.sql
src-tauri/src/: lib.rs  main.rs  mod.rs
src-tauri/src/application/services/: project_service.rs
src-tauri/src/commands/: account.rs  backup.rs  company.rs  contact.rs  dtos.rs  mod.rs  raw.rs  session.rs  user.rs  voucher.rs
src-tauri/src/db/: backup.rs  company.rs  company_reg.rs  mod.rs  schema.rs  system.rs
src-tauri/src/domain/ledger/: mod.rs  tests.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/persistence/repositories/: mod.rs  sqlite_project_repository.rs
src/api/: mod.rs  project_api.rs
src/components/: ProjectRecordForm.rs  icon.rs  mod.rs
src/forgefin-theme/: README.md
src/pages/: accounts.rs  audit_log.rs  company_management.rs  company_selection.rs  contacts.rs  dashboard.rs  general_ledger.rs  login.rs  mod.rs  placeholder.rs  raw_data.rs  reconciliation.rs  settings.rs  voucher.rs  voucher_entry.rs
(+58 files in other folders)
