[package]
name = "forge-fin-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = "2.0.0"

[dependencies]
tauri = { version = "2.0.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
thiserror = "1.0"
anyhow = "1.0"
candle-core = "0.3.1"
candle-nn = "0.3.1"
candle-transformers = "0.3.1"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
